# TTI206-ProjetoIntegradorInterdisciplinar-DesenvolvimentoMultiplataforma

./: README.md  pubspec.yaml
android/app/: build.gradle.kts
atlas_digital_fmabc/: README.md  pubspec.yaml  splash.yaml
atlas_digital_fmabc/android/app/: build.gradle.kts
atlas_digital_fmabc/ios/Runner/: Info.plist
atlas_digital_fmabc/ios/Runner.xcodeproj/: project.pbxproj
atlas_digital_fmabc/lib/: app.dart  main.dart
atlas_digital_fmabc/lib/models/: categoria_model.dart  image_model.dart
atlas_digital_fmabc/lib/screens/: contatos_page.dart
atlas_digital_fmabc/lib/services/: auth_service.dart  category_service.dart  image_service.dart  upload_service.dart
atlas_digital_fmabc/lib/views/: widget_tree.dart
atlas_digital_fmabc/linux/: CMakeLists.txt
atlas_digital_fmabc/linux/runner/: my_application.cc
atlas_digital_fmabc/macos/Runner.xcodeproj/: project.pbxproj
atlas_digital_fmabc/test/: widget_test.dart
atlas_digital_fmabc/web/: index.html  manifest.json
atlas_digital_fmabc/windows/: CMakeLists.txt
backend/: .dockerignore  .gitignore  Dockerfile  compose.yaml  logicalogin.py  main.py  pyproject.toml
backend/src/: image.py
backend/src/db/: app.py  autenticador.py  category.py  image.py  logicalogin.py
ios/Runner/: Info.plist
ios/Runner.xcodeproj/: project.pbxproj
lib/: main.dart
linux/: CMakeLists.txt
linux/runner/: my_application.cc
macos/Runner.xcodeproj/: project.pbxproj
test/: widget_test.dart
web/: index.html  manifest.json
windows/: CMakeLists.txt
windows/runner/: Runner.rc  main.cpp
(+67 files in other folders)
